wiki/src/install/inc/stylesheets/steps.css
span.title {
  display: block;
}

.sidebar {
  display: none;
}

#content {
  padding-left: 250px;
}

p.start {
  min-height: 200px;
}

.step-image {
  position: absolute;
  left: 2.5em;
  height: 200px;
  width: 200px;
}

.step-image img {
  position: relative;
}

.state-image {
  text-align: center;
}

body {
  counter-reset: step;
}

h1:before {
  position: relative;
  left: -2.5em;
  font-size: 0.75em;
  counter-increment: step;
  margin-right: -2em;
  display: inline;
}

/* Thiner border */

.step-image img {
  outline: 3px solid white;
  outline-offset: -4px;
  position: relative;
}

/* Scaling images */

img.screenshot {
  height: 70%;
  transition-duration: 0.3s;
  width: 70%;
}

img.screenshot:hover {
  height: 100%;
  opacity: 1;
  width: 100%;
}

/* Give some room to the title and the sections */

h1 {
  color: #56347C;
  font-weight: 400;
  margin-left: -150px;
  margin-top: 100px;
}

/* Stronger introduction  */

.intro {
  color: black;
  font-size: 18px;
}

/* Trophy is a trophy */

div.trophy {
  border: 5px solid #56347C;
  font-size: 17px;
  margin-top: 30px;
  padding-top: 20px;
  padding-bottom: 20px;
  position: relative;
  background-color: white;
}

div.trophy p {
  color: black;
  font-family: "Source Sans Pro Regular", "DejaVu Sans", "Verdana", "sans-serif";
  font-weight: 200;
}

/* more room for the state */
.state-image {
  margin-top: 0px;
}

p {
  color: black;
}

h2 {
  font-size: 1.5em;
  line-height: 2em;
}

#recommendations h3, #recommendations p:first-child, #recommendations p:last-child {
  text-align: center;
}

#recommendations .row p {
  background: #56347C;
  color: white;
  padding: 10px;
}

#pagebody #content #recommendations .row p a {
  color: white !important;
  font-weight: 400;
  border-color: white;
}

#recommendations img {
  float: left;
  margin: 10px;
}

div.toggleable .hide {
  display: block !important;
}

/*==========  Non-Mobile First Method  ==========*/

/* Large Devices, Wide Screens */
@media only screen and (max-width : 1200px) {

}

/* Medium Devices, Desktops */
@media only screen and (max-width : 992px) {

}

/* Small Devices, Tablets */
@media only screen and (max-width : 768px) {

  #content {
    padding-left: 10px;
  }

  .step-image {
    position: relative;
    height: 200px;
    width: 200px;
    margin: 2em 0;
  }

  h1 {
    font-size: 25px;
    margin-left: 30px;
  }

  /* Scaling images */

  img.screenshot {
    height: 100%;
    width: 100%;
  }

  div.trophy {
    background-position: center 0.5em;
    padding: 60px 1em 1em;
  }

  #recommendations h3 {
    font-size: 20px;
  }

}

/* Extra Small Devices, Phones */
@media only screen and (max-width : 480px) {

}

/* Custom, iPhone Retina */
@media only screen and (max-width : 320px) {

}

/* QR code on the side */

img.qrcode {
  float: right;
  margin-top: -1em;
}

